--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       <div class="btn-wrapper">
         <a href="#" class="btn signup">新規登録はこちら</a>
         <p>or</p>
-        <a href="#" class="btn facebook"><span class="fa fa-facebook"></span>Facebookで登録</a>
-        <a href="#" class="btn twitter"><span class="fa fa-twitter"></span>Twitterで登録</a>
+        <a href="#" class="btn facebook"><span class="fa fa-facebook"></span>ふぇいすぶっくで登録</a>
+        <a href="#" class="btn twitter"><span class="fa fa-twitter"></span>ついったーで登録</a>
       </div>
     </div>
   </div>
